# sidebar

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  AGENTS.md  AUTH_IMPROVEMENTS_PLAN.md  CHANGELOG.md  CUSTOM_TASK_SYSTEM_MIGRATION_PLAN.md  DEPLOYMENT.md  FILE_INGESTION_PLAN.md  FILE_INGESTION_TEST_CHECKLIST.md  FILE_RECENT_ACTIVITY_IMPLEMENTATION_PLAN.md  FS_SKILL_MIGRATION_TO_INGESTION.md  GOODLINKS_PARSING_PLAN.md  GoodLinks-Export-2025.json  GoodLinks-conversation.md  LAYOUT_SWAP_FEATURE_PLAN.md  LOCALSTORAGE_OPTIMIZATION_PLAN.md  LOCAL_DEVELOPMENT_PLAN.md  MEMORY_IMPLEMENTATION_PLAN.md  PRE_COMMIT_IMPLEMENTATION_PLAN.md  R2_STORAGE_MIGRATION_PLAN.md  README.md  REFACTORING_PLAN.md  REFACTORING_PLAN_2026Q1.md  SHORTCUTS_INTEGRATION_PLAN.md  SHORTCUTS_SHARE_SHEET_SETUP.md  SKILL-REFACTORING-REVIEW.md  SKILLS_STORAGE_ALIGNMENT_PLAN.md  SUPABASE_AUTH_IMPLEMENTATION_PLAN.md  SWIFTUI_MIGRATION_PLAN.md  SWIFTUI_REMAINING.md  THINGS_AND_GOODLINKS_INTEGRATION_PLAN.md  THINGS_INTEGRATION_PLAN.md  TOOLTIPS_IMPLEMENTATION_PLAN.md  dev.sh  docker-compose.test.yml  docker-compose.yml  pyproject.toml  vercel.json
api/: __init__.py  (+4 more)
backend/: .pydocstyle  AGENTS.md  SKILLS.md  TESTING.md  fly.toml  pyproject.toml
backend/api/: alembic.ini  auth.py  config.py  constants.py  constraints.txt  exceptions.py  main.py  metrics.py  prompt_config.py  prompt_formatters.py  prompts.py  requirements.txt  supabase_jwt.py
backend/api/alembic/: env.py
backend/api/config/: prompts.yaml
backend/api/db/: __init__.py  base.py  dependencies.py  session.py
backend/api/executors/: __init__.py  skill_executor.py
backend/api/mcp/: fs_tools.py  notes_tools.py  tools.py
backend/api/middleware/: deprecation.py  error_handler.py  metrics.py
backend/api/models/: __init__.py  conversation.py  device_token.py  file_ingestion.py  file_object.py  note.py  task.py  task_area.py  task_group.py  task_operation_log.py  task_project.py  things_bridge.py  things_bridge_install_token.py  user_memory.py  user_settings.py  website.py  website_processing_job.py
backend/api/routers/: chat.py  conversations.py  device_tokens.py  download_headers.py  events.py  files.py  health.py  ingestion.py  ingestion_helpers.py  memories.py  metrics.py  notes.py  notes_folders.py  places.py  scratchpad.py  settings.py  skills.py  tasks.py  things.py  weather.py  websites.py  websites_helpers.py
backend/api/schemas/: __init__.py  filters.py  tool_context.py
backend/api/scripts/: migrate_notes_to_db.py  migrate_websites_to_db.py
backend/api/security/: __init__.py  audit_logger.py  path_validator.py
backend/api/services/: change_bus.py  claude_client.py  claude_streaming.py  conversation_service.py  device_token_service.py  favicon_service.py  file_ingestion_service.py  file_search_service.py  file_tree_service.py  files_service.py  files_sync_service.py  files_workspace_service.py  jina_service.py  memory_service.py  memory_tool_handler.py  notes_helpers.py  notes_service.py  notes_sync_service.py  notes_workspace_service.py  prompt_context_service.py  push_notification_service.py  recurrence_plist_parser.py  recurrence_service.py  settings_service.py  skill_catalog_service.py  skill_file_ops.py  skill_file_ops_helpers.py  skill_file_ops_ingestion.py  skill_file_ops_paths.py  skill_file_ops_storage.py  skill_file_transfer.py  task_change_service.py  task_service.py  task_sync_service.py  tasks_import_service.py  tasks_snapshot_service.py  test_data_plan.py  test_data_service.py  things_bridge_client.py  things_bridge_install_service.py  (+24 more)
backend/api/utils/: __init__.py  domain_utils.py  metadata_helpers.py  pinned_order.py  search.py  timestamps.py  validation.py
backend/docker/: .hadolint.yaml  Dockerfile.skills-api  entrypoint.sh
backend/docs/: GOOGLE_DOCSTRING_STYLE_GUIDE.md
backend/scripts/: __init__.py  add_skill_dependencies.py  backfill_favicons.py  backfill_task_recurrence_anchor.py  backfill_websites_reading_time.py  check_docstrings.sh  db_env.py  generate_skills_md.py  import_goodlinks_sample.py  import_things_sqlite.py  import_things_tasks.py  migrate_existing_websites.py  migrate_file_objects_to_ingestion.py  run_tests.py  run_tests.sh  seed_test_user_data.py  setup_test_db.sh  sync_workspace_to_r2.py
backend/skills/audio-transcribe/: SKILL.md
backend/skills/fs/: SKILL.md
backend/skills/tasks/: SKILL.md
backend/skills/web-crawler-policy/: SKILL.md
backend/skills/web-save/: SKILL.md
backend/skills/xlsx/: recalc.py
backend/skills/youtube-download/: SKILL.md
backend/skills/youtube-transcribe/: SKILL.md
backend/tests/: conftest.py  helpers.py  test_favicon_service.py  test_mcp_client.py  test_mcp_integration.py
backend/tests/api/: test_audit_logger.py  test_auth.py  test_chat_router.py  test_claude_streaming.py  test_conversation_service.py  test_conversations_router.py  test_device_tokens_router.py  test_download_headers.py  test_execution_handlers.py  test_file_ingestion_service.py  test_file_search_service.py  test_file_tree_service.py  test_files_router.py  test_files_workspace_service.py  test_ingestion_helpers.py  test_ingestion_router.py  test_local_storage.py  test_memories_router.py  test_memory_service.py  test_memory_tools.py  test_metadata_helpers.py  test_metrics_router.py  test_notes_router.py  test_notes_service.py  test_notes_workspace_service.py  test_offline_sync_service.py  test_parameter_mapper.py  test_path_validator.py  test_places_router.py  test_prompt_context_service.py  test_prompts.py  test_r2_storage.py  test_recurrence_service.py  test_scratchpad_router.py  test_search_utils.py  test_settings_api.py  test_skill_executor.py  test_ssl_settings.py  test_storage_service.py  test_task_service.py  (+12 more)
backend/tests/integration/: test_health.py
backend/tests/scripts/: test_add_skill_dependencies.py
backend/tests/services/: test_jina_service.py  test_storage_metrics.py  test_task_change_service.py  test_tool_mapper_metrics.py  test_url_normalization_service.py  test_website_transcript_service.py
backend/workers/: __init__.py  ingestion_worker.py
(+1368 files in other folders)
