[project]
name = "sidebar"
version = "0.1.0"
description = "Lightweight development environment for Agent Skills"
authors = [
    {name = "Sean Betts", email = "seanbetts@icloud.com"}
]
requires-python = ">=3.11"

# Runtime dependencies for skills with bundled scripts
dependencies = [
    # PDF processing (pdf skill)
    "pypdf>=4.0.0",
    "pdfminer.six>=20231228",
    "pdfplumber>=0.11.0",
    # PowerPoint processing (pptx skill)
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    # Image manipulation (used by pptx skill)
    "Pillow>=10.0.0",
    # Safe XML parsing (used by docx/pptx ooxml scripts)
    "defusedxml>=0.7.1",
    # HTTP library (for custom scripts)
    "requests>=2.31.0",
    # YAML processing (folder-config skill)
    "PyYAML>=6.0",
    # Web-save parsing
    "readability-lxml>=0.8.1",
    "markdownify>=0.11.6",
    "beautifulsoup4>=4.12.0",
    # YouTube downloading (youtube-download skill)
    "yt-dlp>=2024.0.0",
    # Audio transcription (audio-transcribe skill)
    "pydub>=0.25.1",
    "tqdm>=4.66.0",
    # Async HTTP (subdomain-discover, web-crawler-policy skills)
    "aiohttp>=3.9.0",
    # DNS resolution (subdomain-discover skill)
    "dnspython>=2.4.0",
    # XML parsing (subdomain-discover skill)
    "lxml>=4.9.0",
    # Table formatting (web-crawler-policy skill)
    "tabulate>=0.9.0",
    # Excel extraction for ingestion
    "openpyxl>=3.1.2",
    "python-calamine>=0.4.0",
    # LLM-powered reports (web-crawler-policy skill, optional)
    "openai>=1.0.0",
    # PostgreSQL driver (database)
    "psycopg2-binary>=2.9.0",
    # SQLAlchemy ORM (database)
    "sqlalchemy>=2.0.0",
    # FastAPI web framework (API)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Pydantic settings (configuration)
    "pydantic-settings>=2.0.0",
    # Anthropic client (Claude streaming)
    "anthropic>=0.59.0",
    # MCP server (tool exposure)
    "fastmcp>=0.4.0",
    # Google Gemini client (title generation)
    "google-genai>=1.0.0",
    # R2/S3 client
    "boto3>=1.34.0",
    # Observability
    "prometheus-client>=0.20.0",
    "sentry-sdk>=2.18.0",
    # Supabase JWT validation
    "PyJWT[crypto]>=2.8.0",
    "cryptography>=41.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    # Agent Skills validation tool (dev only)
    "skills-ref @ git+https://github.com/agentskills/agentskills.git#subdirectory=skills-ref",
    # Testing infrastructure
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0", # Parallel test execution
    "pytest-asyncio>=0.24.0",
    "pytest-env>=1.1.3",
    # Docstring linting and coverage
    "interrogate>=1.7.0", # Docstring coverage
    "pydocstyle>=6.3.0", # Docstring style checking (Google style)
    "darglint>=1.8.1", # Docstring/signature validation
    "mypy>=1.19.1",
    "alembic>=1.17.2",
    "types-pyyaml>=6.0.12.20250915",
    "types-tabulate>=0.9.0.20241207",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
env = [
    "TESTING=1",  # Enable test mode for Settings
]
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",                    # Verbose output
    "--strict-markers",      # Raise error on unknown markers
    "--tb=short",           # Shorter traceback format
    "--cov=api",            # Coverage for backend API
    "--cov-report=term-missing",  # Show missing lines
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "asyncio: marks tests as async tests",
]

[tool.interrogate]
# Docstring coverage configuration
ignore-init-method = true         # Don't require docstrings for __init__ methods
ignore-init-module = false        # Require module docstrings (we have 100% coverage)
ignore-magic = true               # Don't require docstrings for magic methods (__str__, etc.)
ignore-module = false             # Check module docstrings
ignore-nested-functions = false   # Check nested functions
ignore-nested-classes = true      # Don't check nested classes
ignore-private = true             # Don't require docstrings for _private methods
ignore-property-decorators = false
ignore-semiprivate = false        # Don't ignore __semiprivate (useful)
ignore-setters = false
fail-under = 80                   # Fail if coverage drops below 80%
exclude = ["setup.py", "docs", "tests", "alembic"]
verbose = 2                       # Detailed output
quiet = false
color = true
generate-badge = "."              # Generate badge in current directory
badge-format = "svg"

[tool.pydocstyle]
# Pydocstyle configuration (also reads from .pydocstyle file)
convention = "google"             # Use Google-style docstrings
add_ignore = ["D104"]             # Ignore: Missing docstring in public package

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = "api/alembic/versions"
